--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<h1>Body of solutions. None so far.</h1>
+	<h1>Body of solutions.</h1>
 	<h2>Problem 1</h2>
 	<p>Find the sum of all the multiples of 3 or 5 below 1000.</p>
 	<p class="sol1">The solution is: </p>
