--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	<h2>Problem 1</h2>
 	<p>Find the sum of all the multiples of 3 or 5 below 1000.</p>
 	<p class="sol1">The solution is: </p>
+	
+	<br>
+	<br>
+	
+	<h2>Problem 2</h2>
+	<p>Find the sum of all Fibonacci terms less than four million.</p>
+	<p class="sol2">The solution is: </p>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="scripts/main.js"></script>
 </body>
